--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,4 +1,4 @@
-/* by 김은주, 코드리펙토링 230210 */
+/* by 김은주, 코드리펙토링 230214 */
 
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&family=DM+Serif+Display&family=Noto+Sans+KR:wght@400;700&display=swap');
 
@@ -281,64 +281,36 @@ transition: all 0.4s ease-in-out;
    padding:0 20px 10px;
 }
 
-/* 서브페이지 visual + title*/
-/*desktop버전 css*/
-.desktop .img-responsive {
-   height: 500px;
-   max-width:100%;
-   background-position: center;
-   background-size: cover;
-   display:flex; 
-   justify-content:center;
-   align-items:flex-end;
-}
-.boardText1 {
-   width: 390px; 
-   height: 173px; 
-   background-color: #fff;
-   color: #292F36;
-   border-radius: 37px 37px 0 0; 
-   text-align: center; 
-    padding-top: 10px;
-}
-.boardTitle1{
-   font-family:'DM Serif Display';
-   font-size: 50px;
-}
-.boardSub1 {
-   color:#4D5053;
-   font-family: 'Noto Sans KR';
-   font-size: 22px;
-}
-/*mobile버전 css*/   
-.mobileImg{
-   height: 350px;
-   max-width:100%;
-   background-position: center;
-   background-size: cover;
-   display:flex; 
-   justify-content:center;
-   align-items:flex-end;
-}
-   
-.boardText2 {
+/* by 김은주, 정은진 - 서브페이지 visual + title*/
+.titarea {display:flex;justify-content:center;align-items:flex-end;height: 330px;background-position: center;background-size: cover;}
+.titarea .boardText {
    width: 273px; 
    height: 121px; 
    background-color: #fff;
    color: #292F36;
    border-radius: 26px 26px 0 0; 
+   text-align: center; 
     padding-top: 0;
 }
-.boardTitle2{
-   font-family:DM Serif Display;
-   text-align: center; 
+.titarea .boardTitle{
+   font-family:'DM Serif Display';
    font-size: 35px;
 }
-.boardSub2 {
+.titarea .boardSub {
    color:#4D5053;
-   font-family: Noto Sans KR;
-    text-align: center; 
-    font-size: 16px;
+   font-family: 'Noto Sans KR';
+   font-size: 16px;
+}
+@media (min-width: 992px) {
+   .titarea {height: 500px;}
+   .titarea .boardText {
+	   width: 390px; 
+	   height: 173px; 
+	   border-radius: 37px 37px 0 0; 
+	   padding-top: 10px;
+	}
+	.titarea .boardTitle{font-size: 50px;}
+	.titarea .boardSub { font-size: 22px;}
 }
 
 /*media*/
@@ -525,7 +497,7 @@ transition: all 0.4s ease-in-out;
 
 /* by, 김은주, 정은진 - 로그인, 비밀번호찾기, 회원가입, 정보수정 */
 .backgroundImg {
-	background-image: url('/backgroundImage/loginImg.png');
+	background-image: url('img/subbg_login.png');
 	background-size: cover;
 	margin-bottom:-100px;
 	padding:100px 15px;
