--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -495,6 +495,17 @@ transition: all 0.4s ease-in-out;
 .adminlink:hover h1 {color:#CC947C}
 
 /* by, 김은주, 정은진 - 로그인, 비밀번호찾기, 회원가입, 정보수정 */
+.chkMsg{
+	cursor: pointer;
+	color: #333;
+    text-decoration: none;
+   	font-size: 16px !important;
+	font-family: 'Crimson Pro';
+}
+.foundMsg, .notFoundMsg{
+	font-size: 16px !important;
+	font-family: 'Crimson Pro';
+}
 .backgroundImg {
 	background-image: url('/img/subbg_login.png');
 	background-size: cover;
